--- a/docker-compose-build.yaml
+++ b/docker-compose-build.yaml
@@ -3,16 +3,16 @@ services:
   reverseproxy:
     build:
       context: ./udagram-reverseproxy
-    image: reverseproxy:v2
+    image: reverseproxy:v1
   backend-user:
     build:
       context: ./udagram-api-user
-    image: udagram-api-user:v2
+    image: udagram-api-user:v1
   backend-feed:
     build:
       context: ./udagram-api-feed
-    image: udagram-api-feed:v2
+    image: udagram-api-feed:v1
   frontend:
     build:
       context: ./udagram-frontend
-    image: udagram-frontend:local-v2
+    image: udagram-frontend:v1
