--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
 script:
   - docker --version # print the version for logging
   # build images
-  - docker build -t reverseproxy:v1 ./udagram-api-user
+  - docker build -t reverseproxy:v1 ./udagram-reverseproxy
   - docker build -t udagram-frontend:v1 ./udagram-frontend
   - docker build -t udagram-api-feed:v1 ./udagram-api-feed
   - docker build -t udagram-api-user:v1 ./udagram-api-user
