--- a/udagram-frontend-deployment.yaml
+++ b/udagram-frontend-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: udagram-frontend-app
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: udagram-frontend-app
@@ -20,6 +20,12 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 80
+        resources:
+          requests:
+            memory: "100Mi"
+          limits:
+            memory: "200Mi"
+            cpu: "0.5"
         envFrom:  
           - secretRef:
               name: env-secret
